--- a/public/sass/elements/_govuk-template-base.scss
+++ b/public/sass/elements/_govuk-template-base.scss
@@ -101,9 +101,9 @@ a:active {
 // External link styles
 a[rel="external"] {
   @include external-link-default;
-  @include external-link-19;
-  @include media-down(mobile) {
-    @include external-link-16;
+  @include external-link-16;
+  @include media(tablet) {
+    @include external-link-19;
   }
 }
 
