--- a/views/includes/scripts.html
+++ b/views/includes/scripts.html
@@ -3,6 +3,7 @@
 <!-- govuk_frontend_toolkit js -->
 <script src="/public/javascripts/govuk_frontend_toolkit/vendor/polyfills/bind.js"></script>
 <script src="/public/javascripts/govuk_frontend_toolkit/govuk/selection-buttons.js"></script>
+<script src="/public/javascripts/govuk_frontend_toolkit/govuk/modules.js"></script>
 
 <!-- govuk_elements js -->
 <script src="/public/javascripts/vendor/details.polyfill.js"></script>
