--- a/views/includes/scripts.html
+++ b/views/includes/scripts.html
@@ -8,6 +8,7 @@
 <!-- govuk_elements js -->
 <script src="/public/javascripts/modules-start.js"></script>
 <script src="/public/javascripts/modules/toggle-radio.js"></script>
+<script src="/public/javascripts/modules/toggle-checkbox.js"></script>
 
 <script src="/public/javascripts/vendor/details.polyfill.js"></script>
 <script src="/public/javascripts/application.js"></script>
