--- a/views/snippets/form_inset_radios.html
+++ b/views/snippets/form_inset_radios.html
@@ -7,10 +7,10 @@
 
     <legend class="visuallyhidden">Do you know their National Insurance number?</legend>
 
-    <div class="form-group">
+    <div class="form-group" data-module="radio-toggle">
 
-      <label class="block-label" data-target="example-ni-no" for="radio-indent-1">
-        <input id="radio-indent-1" type="radio" name="radio-indent-group" value="Yes">
+      <label class="block-label" for="radio-indent-1">
+        <input data-target="example-ni-no" id="radio-indent-1" type="radio" name="radio-indent-group" value="Yes">
         Yes
       </label>
 
