--- a/views/snippets/form_inset_checkboxes.html
+++ b/views/snippets/form_inset_checkboxes.html
@@ -10,7 +10,7 @@
 
     <legend class="visuallyhidden">What is your nationality?</legend>
 
-    <div class="form-group">
+    <div class="form-group" data-module="checkbox-toggle">
       <label class="block-label" for="nationalities-british">
         <input id="nationalities-british" name="nationalities" type="checkbox" value="British">
         British (including English, Scottish, Welsh and Northern Irish)
@@ -19,8 +19,8 @@
         <input id="nationalities-irish" name="nationalities" type="checkbox" value="Irish">
         Irish
       </label>
-      <label class="block-label" for="nationalities-other" data-target="example-different-country">
-        <input id="nationalities-other" name="nationalities" type="checkbox" value="Citizen of a different country">
+      <label class="block-label" for="nationalities-other">
+        <input id="nationalities-other" data-target="example-different-country" name="nationalities" type="checkbox" value="Citizen of a different country">
         Citizen of a different country
       </label>
       <div class="panel panel-border-narrow js-hidden" id="example-different-country">
