--- a/views/includes/scripts.html
+++ b/views/includes/scripts.html
@@ -6,6 +6,7 @@
 <script src="/public/javascripts/govuk_frontend_toolkit/govuk/modules.js"></script>
 
 <!-- govuk_elements js -->
+<script src="/public/javascripts/modules/toggle.js"></script>
 <script src="/public/javascripts/modules/toggle-radio.js"></script>
 <script src="/public/javascripts/modules/toggle-checkbox.js"></script>
 <script src="/public/javascripts/modules-start.js"></script>
